Working on Map Page and City Input Admin Form Currrently staticly linked, will have admin etc authentication.
Working on gettig the Jade Select boxes to work.  They arent.

--- a/views/city_form.jade
+++ b/views/city_form.jade
@@ -15,7 +15,7 @@ block content
         label.form_label Allegiance or Region:
           select(name='allegiance_select')
             option(value="Please Select")
-            option(name='option 1' value='region 1')
+            option(value='region 1')
             option(value='region 2')
             option(value='region 3')
             option(value='region 4')
